--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
                          <li><a href="#techni">SKILLS</a></li>
                          <li><a href="#hob">HOBBIES &amp; INTERESTS</a></li>
                          <li><a href="#form">FEEDBACK</a></li>
-                         <li><a id="icon" href="#"><img src="./images/sunmoon.png" alt="mode" width="50px" height="50px"></a></li>
+                         <li><a id="icon" href="#"><img src="./images/sunmoon.png" alt="mode" width="50px" height="50px" id="mode"></a></li>
                     </ul>
                          <div class="clear"></div>
                </div>
@@ -146,9 +146,9 @@
           icon.onclick = function() {
               document.body.classList.toggle("dark-theme");
               if (document.body.classList.contains("dark-theme")) {
-                  icon.src = "./images/sun.png";
+                  mode.src = "./images/sun.png";
               } else {
-                  icon.src = "./images/moon.png";
+                  mode.src = "./images/moon.png";
               }
               // Save the selected theme to localStorage
               localStorage.setItem('theme', document.body.classList.contains("dark-theme") ? 'dark-theme' : '');
